Archive2/1e/cff95fd958461c/output
main.cpp: In function 'int main()':
main.cpp:5:2: error: 'cin' was not declared in this scope
  cin>> cases>> height>> width;
  ^
main.cpp:5:2: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.0/iostream:60:18: note:   'std::cin'
   extern istream cin;  /// Linked to standard input
                  ^
